# r5

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BASELINES_INDEX.md  BASELINES_QUICKSTART.md  BASELINES_README.md  BASELINES_SUMMARY.txt  CREATED_FILES.txt  DATA_PIPELINE_INDEX.md  DATA_PIPELINE_QUICKSTART.md  DELIVERY_CHECKLIST.md  DELIVERY_SUMMARY.md  DELIVERY_SUMMARY.txt  Dockerfile  EVALUATION_FRAMEWORK.md  EVALUATION_QUICK_START.md  FOUNDATION_MODELS_README.md  IMPLEMENTATION_INDEX.md  INTEGRATION_NOTES.md  ORCHESTRATION_SUMMARY.md  PIPELINE_IMPLEMENTATION_SUMMARY.txt  QUICK_START.md  README.md  Snakefile  dvc.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: data_pipeline.json  data_pipeline.yaml  evaluation.json  evaluation.yaml  foundation_models.json  foundation_models.yaml  minimal_example.yaml  model_baselines.json  model_baselines.yaml  pipeline.json  pipeline.yaml
contrib/nextflow/: README.md  nextflow.config
data/: demo_data_summary.json  patient_metadata.csv  slide_metadata.csv
data/embeddings/: coords.npz
data/features/: radiomics_features.csv
data/splits/: splits.csv
data/tiles/: tile_manifest.csv
docs/: ORCHESTRATION.md  README.md  benchmark_targets.md  dataset_catalog.md  literature_landscape.md
nextflow/: main.nf  nextflow.config
results/: pipeline_run.json
results/evaluation/: all_metrics.json
scripts/: __init__.py  download_data.sh  extract_foundation_features.py  generate_demo_data.py  run_evaluation.py  run_pipeline.sh  run_preprocessing.py  train_baselines.py
src/: __init__.py
src/data/: README.md  __init__.py  (+5 more)
tests/: test_data_pipeline.py  test_evaluation.py  test_foundation.py  test_integration.py  test_models.py  test_orchestration.py
(+92 files in other folders)
